# AIM

./: .gitignore  EXAMPLES.md  INSTALLATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  claude_desktop_config.example.json  pyproject.toml  verify_installation.py
src/aim_mcp_server/: __init__.py  __main__.py  refinement_loop.py  review.py  server.py  storage.py  task_manager.py
src/aim_mcp_server/agents/: __init__.py  base.py  claude.py  claude_code.py  registry.py
src/aim_mcp_server/utils/: __init__.py  constraints.py  logging.py
tests/: __init__.py  test_refinement_loop.py  test_server.py  test_task_manager.py
